updated BookRepositoryTest.testFindByIdShouldReturnOptionalOfTheBookWithTheIdWhenBookExists